Revert "Fixed footer overlapping the left menu"
This reverts commit 64c6bebef15ad4c4f22acbd8ba92c00844720a21.

--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -1,3 +1,6 @@
+---
+---
+
 @import "{{ site.theme }}";
 
 .side-bar {
@@ -58,12 +61,6 @@ img {
   .inner {
     width: 69%;
     padding: 50px 10px 30px 10px;
-  }
-}
-
-#footer_wrap {
-  .inner {
-    width: 69%;
   }
 }
 
